Sign Out button

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -28,6 +28,7 @@
         <li class="tab"><a href="#test1">My Toduo</a></li>
         <li class="tab"><a class="active" href="#test2">Test 2</a></li>
         <li class="tab"><a href="#test4"><i class="large material-icons">add</i></a></li>
+        <li class="tab right"><a href="#test1">Sign Out</a></li>
       </ul>
     </div>
   </nav>
