--- a/public/index.html
+++ b/public/index.html
@@ -107,9 +107,9 @@
         var email = user.email;
         var uid = user.uid;
 
-        firebase.database().ref('toduos/' + uid + '/').set({
-          email: email,
-        });
+				firebase.database().ref('toduos/' + uid + '/email/').set({
+					email,
+				});
 
         //Console.log("User" + email + " Signed In");
         window.location.replace("./dashboard.html");
