--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
         var email = user.email;
         var uid = user.uid;
 
-				firebase.database().ref('toduos/' + uid + '/email/').set({
+				firebase.database().ref('toduos/' + uid + '/').update({
 					email,
 				});
 
