Completed Color Changes

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body class="blue-grey lighten-5" style="overflow:hidden;height:100%;">
-    <nav class="nav-extended deep-purple hide-mobile">
+    <nav class="nav-extended blue darken-2 hide-mobile">
       <div class="nav-wrapper">
         <a class="brand-logo center">ToDuo</a>
       </div>
