--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -19,7 +19,7 @@
 
 	<!-- Tool Bar -->
 	<nav class="nav-extended blue darken-2">
-		<div class="nav-wrapper valign-wrapper">
+		<div class="nav-wrapper">
 			<a class="brand-logo center"><h1>ToDuo</h1></a>
 			<div class="row">
 				<ul id="nav-mobile">
