Fixed History Build Up

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -362,6 +362,7 @@
 
 		function setDuo(element) {
 			clearTodo("friends_todoList");
+			clearTodo("friends_historyList");
 			var friendUid = element.id;
 
 			if(friendUid == "defaultList") {
