--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>ToDuo: Collaborative Todo Lists</title>
 	<!--Import Google Icon Font-->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!--Import materialize.css-->
@@ -9,6 +10,11 @@
 	<link type="text/css" rel="stylesheet" href="css/custom_dashboard.css"/>
 	<!--Let browser know website is optimized for mobile-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+	<meta charset="UTF-8">
+  	<meta name="description" content="ToDuo: collaborative todo lists">
+  	<meta name="keywords" content="todo,lists,memory,collaborative">
+  	<meta name="author" content="Kyle Zappitell">
 </head>
 
 <body style="background-color:#ede7f6;">
