--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>ToDuo: Collaborative Todo Lists</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -8,6 +9,11 @@
     <link type="text/css" rel="stylesheet" href="css/custom_login.css"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <meta charset="UTF-8">
+    <meta name="description" content="ToDuo: collaborative todo lists">
+    <meta name="keywords" content="todo,lists,memory,collaborative">
+    <meta name="author" content="Kyle Zappitell">
   </head>
 
   <body class="blue-grey lighten-5" style="overflow:hidden;height:100%;">
